--- a/package.json
+++ b/package.json
@@ -23,10 +23,13 @@
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
     "@fortawesome/fontawesome-free": "^5.8.2",
+    "angular-tslint-rules": "^1.18.0",
     "bootstrap": "^4.3.1",
     "bootstrap-navbar-replacement": "^1.0.3",
+    "braces": "^3.0.2",
     "core-js": "^2.5.4",
     "firebase": "^5.11.1",
+    "firebase-functions": "^3.1.0",
     "hammerjs": "^2.0.8",
     "jquery": "^3.4.1",
     "ng-input-currency": "^0.9.10",
@@ -41,20 +44,20 @@
     "@angular/cli": "~7.2.2",
     "@angular/compiler-cli": "~7.2.0",
     "@angular/language-service": "~7.2.0",
-    "@types/node": "~8.9.4",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "~8.9.4",
     "codelyzer": "~4.5.0",
     "jasmine-core": "~2.99.1",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.1.1",
+    "karma": "^4.2.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tslint": "~5.11.0",
+    "tslint": "^5.11.0",
     "typescript": "~3.2.2"
   }
 }
