--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,5 +18,11 @@
       "es2018",
       "dom"
     ]
+  },
+  "functions": {
+    "predeploy": [
+      "npm --prefix \"%RESOURCE_DIR%\" run lint",
+      "npm --prefix \"%RESOURCE_DIR%\" run build"
+    ]
   }
 }
